--- a/server_w_express/package.json
+++ b/server_w_express/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.5",
+    "@graphql-tools/schema": "^10.0.4",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
+    "http": "^0.0.1-security",
+    "ws": "^8.18.0"
   }
 }
